--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -135,78 +135,81 @@ h1,
 }
 
 
-.darkLight {
 
-    span {
-        font-weight: bold;
-    }
-
-    .switch {
-        --input-focus: #ffffff;
-        --bg-color: #fff;
-        --bg-color-alt: #303030;
-        --main-color: #272727;
-        --input-out-of-focus: #6e6e6e;
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 30px;
-        width: 70px;
-        height: 36px;
-        transform: translateX(calc(50% - 10px));
-    }
-
-    .toggle {
-        opacity: 0;
-    }
-
-    .slider {
-        box-sizing: border-box;
-        border-radius: 100px;
-        border: 2px solid var(--main-color);
-        box-shadow: 4px 4px var(--main-color);
-        position: absolute;
-        cursor: pointer;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: var(--input-out-of-focus);
-        transition: 0.3s;
-    }
-
-    .slider:before {
-        content: "off";
-        box-sizing: border-box;
-        height: 30px;
-        width: 30px;
-        position: absolute;
-        left: 2px;
-        bottom: 1px;
-        border: 2px solid var(--main-color);
-        border-radius: 100px;
-        background-color: var(--bg-color);
-        color: var(--main-color);
-        font-size: 14px;
-        font-weight: 600;
-        text-align: center;
-        line-height: 25px;
-        transition: 0.3s;
-    }
-
-    .toggle:checked+.slider {
-        background-color: var(--input-focus);
-        transform: translateX(-32px);
-    }
-
-    .toggle:checked+.slider:before {
-        content: "on";
-        transform: translateX(32px);
-    }
+.darkLight .switch {
+    --input-focus: #ffffff;
+    --bg-color: #fff;
+    --bg-color-alt: #303030;
+    --main-color: #272727;
+    --input-out-of-focus: #6e6e6e;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    width: 70px;
+    height: 36px;
+    transform: translateX(calc(50% - 10px));
 }
 
+
+.darkLight span {
+    font-weight: bold;
+
+}
+
+
+.darkLight .toggle {
+    opacity: 0;
+}
+
+
+.darkLight .slider {
+    box-sizing: border-box;
+    border-radius: 100px;
+    border: 2px solid var(--main-color);
+    box-shadow: 4px 4px var(--main-color);
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--input-out-of-focus);
+    transition: 0.3s;
+}
+
+
+.darkLight .slider:before {
+    content: "off";
+    box-sizing: border-box;
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    left: 2px;
+    bottom: 1px;
+    border: 2px solid var(--main-color);
+    border-radius: 100px;
+    background-color: var(--bg-color);
+    color: var(--main-color);
+    font-size: 14px;
+    font-weight: 600;
+    text-align: center;
+    line-height: 25px;
+    transition: 0.3s;
+}
+
+
+.darkLight .toggle:checked+.slider {
+    background-color: var(--input-focus);
+    transform: translateX(-32px);
+}
+
+.darkLight .toggle:checked+.slider:before {
+    content: "on";
+    transform: translateX(32px);
+}
 
 
 .navItmesMob {
